tools/tests/ui/fail/l1064.cnf
// Test file for error code: L1064
// Expected error: Overflow Boundary character in division structure -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-overflow".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
